--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -110,3 +110,23 @@ month={Oct},}
   year={2008},
   publisher={Elsevier}
 }
+
+@article{wilson2016pheeno,
+  title={Pheeno, a versatile swarm robotic research and education platform},
+  author={Wilson, Sean and Gameros, Ruben and Sheely, Michael and Lin, Matthew and Dover, Kathryn and Gevorkyan, Robert and Haberland, Matt and Bertozzi, Andrea and Berman, Spring},
+  journal={IEEE Robotics and Automation Letters},
+  volume={1},
+  number={2},
+  pages={884--891},
+  year={2016},
+  publisher={IEEE}
+}
+
+@inproceedings{bonani2010marxbot,
+  title={The marXbot, a miniature mobile robot opening new perspectives for the collective-robotic research},
+  author={Bonani, Michael and Longchamp, Valentin and Magnenat, St{\'e}phane and R{\'e}tornaz, Philippe and Burnier, Daniel and Roulet, Gilles and Vaussard, Florian and Bleuler, Hannes and Mondada, Francesco},
+  booktitle={2010 IEEE/RSJ International Conference on Intelligent Robots and Systems},
+  pages={4187--4193},
+  year={2010},
+  organization={IEEE}
+}
