--- a/main.tex
+++ b/main.tex
@@ -44,7 +44,8 @@
 \input{data/Example.tex}
 \input{data/Hardware.tex}
 \input{data/Platform.tex}
-
+\input{data/PCB.tex}
+\input{data/UI.tex}
 
 %%% 其它部分
 \backmatter
