--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -130,3 +130,13 @@ month={Oct},}
   year={2010},
   organization={IEEE}
 }
+
+
+@online{arduino_mega-2560-r3,
+  author =      {https://www.arduino.cc/},
+  title =       {ARDUINO MEGA 2560 REV3},
+  urldate =     {2020-02-01},
+  url =         {https://store.arduino.cc/usa/mega-2560-r3},
+  year =        2020,
+}
+
