--- a/data/Platform.tex
+++ b/data/Platform.tex
@@ -88,6 +88,9 @@ Swarm仿真参考ShapeBots\cite{suzuki2019shapebots}的仿真方法\footnote{\hr
 
 各类定位方法优缺点\cite{ozgur2018cellulo}如表~\ref{tab:localization}所示。
 
+一类可能有效的定位方式来源于Lee\cite{lee2005moveable}的投影仪辅助定位。
+
+
 \section{底盘}
 考虑到交互过程中需要推动小车，通过用户调查我们知道：大多数用户（特别是儿童）习惯于按压着移动小车，这就使得我们不能采用Zooids\cite{le2016zooids}(如图~\ref{fig:Zooids})或e-puck\cite{mondada2009puck}(如图~\ref{fig:e-puck})使用的差速转向，只能采用类似Cellulo\cite{ozgur2017cellulo}(如图~\ref{fig:Cellulo})的磁驱技术或WolfBot\cite{betthauser2014wolfbot}(如图~\ref{fig:WolfBot})使用的全向轮。
 
