--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -140,3 +140,10 @@ month={Oct},}
   year =        2020,
 }
 
+@inproceedings{lee2005moveable,
+  title={Moveable interactive projected displays using projector based tracking},
+  author={Lee, Johnny C and Hudson, Scott E and Summet, Jay W and Dietz, Paul H},
+  booktitle={Proceedings of the 18th annual ACM symposium on User interface software and technology},
+  pages={63--72},
+  year={2005}
+}
