--- a/main.tex
+++ b/main.tex
@@ -13,7 +13,7 @@
 \usepackage{thuthesis}
 
 \usepackage{lscape}     % for landscape table
-
+\usepackage[cache=false]{minted}  % 代码高亮
 % 定义所有的图片文件在 figures 子目录下
 \graphicspath{{figures/}}
 
@@ -73,6 +73,9 @@
 %% 附录
 \begin{appendix}
     \input{data/Appendix-PCB}
+    \input{data/Appendix-EN}
+    \input{data/Appendix-CN}
+    \input{data/Appendix-Code}
 %\input{data/appendix01}
 \end{appendix}
 
