--- a/data/Appendix-Code.tex
+++ b/data/Appendix-Code.tex
@@ -2,6 +2,7 @@
 \label{cha:Code}
 
 \section{平均值分布式算法收敛性检测}
+\label{sec:Consensus}
 % minted需要latexmk 加入 --shell-escape 参数，即 $ latexmk -xelatex --shell-escape main.tex
 % \usepackage[cache=false]{minted}  % 代码高亮
 
