--- a/data/Appendix-CN.tex
+++ b/data/Appendix-CN.tex
@@ -4,7 +4,7 @@
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics[height=2cm]{zooids-1.jpg}
+    \includegraphics[width=\columnwidth]{zooids-1.jpg}
     \caption*{图~1\hskip1em Zooids可以被持有，可以集体或单独被操纵，表现为物理像素，充当控制器，并且可以在控制下动态移动。 它们是被称为群体交互界面的新型用户界面的积木单元。}
     \label{fig:headfigure}
 \end{figure}
@@ -107,6 +107,210 @@ Wikipedia中将“Zooid”定义为“属于动物群体的单个动物。Zooids
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics[height=8cm]{zooids-2.png}
+    \includegraphics[width=\columnwidth]{zooids-2.png}
     \caption*{图~2\hskip1em 徒手画图（1-3）和曲线操作（4）}
 \end{figure}
+
+徒手画图:
+
+受矢量图形创作工具的启发，我们实现了徒手绘制工具的大版本，如图2所示：最初，徒手绘制的动物标本动物位于工作表面的中心，而未分配的动物标本动物在顶部等待，处于空闲状态 状态（图2-1）。 当用户拖动徒手绘制的动物区系时，先前处于空闲状态的动物区系会移动到图形动物区系的路径上，以形成一条物理路径（图2-2和3）。 当系统用尽了空闲的动物时，步道将遵循徒手绘制工具的作用，就像蛇一样。 通过分别拖动其组成的动物类动物（图2-4），或者同时移动其中的许多动物类动物（例如，用手臂的侧面推动它们），也可以使曲线变形。
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{zooids-3.png}
+    \caption*{图~3\hskip1em 根据圆的直径自动插入（2）或去除（3）的zooids}
+\end{figure}
+
+形状：
+
+我们还基于桌面应用程序的标准橡皮筋技术，尝试了用于绘制线条，矩形和圆形的工具。这些工具中的每一个都使用两个动物群作为控制点。图3显示了一个圆形工具的示例，其中使用了两个控制点来定义圆形的直径，并且闲置的动物类动物会自动定位以完成圆形。根据构造形状所需的动物数量，动物源也会自动添加或删除。表格底部的另一个动物图案（未显示）允许用户在形状之间进行切换。
+
+贝塞尔曲线：
+
+在传统的矢量绘图编辑工具中，贝塞尔曲线允许使用离散控制点进行精确成形。我们开发了一种物理曲线编辑工具，其中放置了一组动物类动物来代表一条曲线。使用以前引入的绘图工具进行造型需要同时操纵多个动物类动物时，该工具使用特定的动物类动物作为控制点来调整集合所代表的曲率。每个控制点都包含两个动物区系，其中一个设置锚点，另一个控制切线。
+
+重要的是要注意，尽管GUI当前支持更高的信息分辨率，但是Zooid可以实现更丰富的物理手势。我们相信，技术的进步将使未来的群体用户界面具有更高的分辨率。
+
+\subsection{交互式集群可视化}
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{zooids-4.png}
+    \caption*{图~4\hskip1em 使用动物类动物的折线图可视化}
+\end{figure}
+
+时间序列导航:
+
+我们使用动物群来可视化和导航时间序列数据。图4-0 1中所示的物理接口以折线图显示了计算机上CPU使用率的变化。诸如轴和标签之类的装饰是静态的（例如，打印在纸上），而数据可视化本身是动态的并不断更新–随着新数据的到达，折线图似乎向左移动。在界面的底部，动物小动物扮演着小部件的角色，使用户可以自定义显示并浏览数据。右下角的两个动物标识指定了可视化的时间范围–它们的作用类似于范围滑块的两个拇指[1]。如果用户将左手拇指向左移动（见图4-2），则折线图会拉伸以显示更宽的时间范围。过去将两个动物群都向左滚动。最后，另一个动物（参见图4-1的中心）使用户可以在CPU使用率和内存使用率之间切换可视化。
+
+多个散点图：
+
+散点图是可视化数据点的最常用方法之一。更具体地看多变量数据，同时表示多个维度的能力与更好地理解数据，识别趋势和隔离聚类特别相关。我们的散点图物理化工具允许数据集的多个并置表示，每个表示一个唯一的维度。一个代表可以帮助识别一组点。然后，用户可以拾取这些动物群，并放置在另一个散点图中。由于每个动物标本都包含一个特定的数据点，因此将其移动到不同的图表中可以使用户探查不同的维度。此外，用户可以将动物标本放置在活动图形显示（例如手机或平板电脑）上，以查找有关该数据点的其他参数和信息。
+
+\subsection{定格动画}
+
+受传统定格动画工具的启发，我们实现了一个工具，使用户能够创作物理动画。用户放置每个动物群以形成所需的布局。将时间轴上的动物向前移动一步，会将当前布局保存为关键帧。记录了所需的布局后，切换第二个控制动物按钮即可将模式切换为播放并连续播放不同的关键帧。
+
+\subsection{野外场景}
+
+尽管我们尚未实现特定的应用程序，但我们已经开始尝试在野外场景中进行操作，在这种情况下，可以将动物类动物嵌入到实际环境中。例如，可以将它们放置在用户的办公桌上，以用作环境显示（例如，显示下载进度），额外的控件，或用作通知设备（例如，当重要事件开始时，它们可以撞击金属或玻璃物体）或提醒您喝水）。足够多的动物甚至可以移动智能手机等物体。
+
+\section{ZOOIDS硬件和软件设计}
+
+从刚才介绍的动物类动物的使用示例中详细阐述，本节介绍了它们的硬件和软件设计。
+
+\subsection{硬件}
+
+机器人设计：
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[height=6cm]{zooids.png}
+    \caption*{图~5\hskip1em zooid爆炸图}
+\end{figure}
+
+Zooid是小型的定制机器人，如图5所示。 它们的尺寸为直径26毫米，高度21毫米，重约12克。 每个机器人均由100 mAh锂聚合物电池供电，并使用马达驱动的车轮。 电机非共线放置以减小直径。 即使电动机不绕同一轴旋转，机器人也具有与共线电动机相同的净力和力矩。 为了驱动机器人，使用了一个电动机驱动器芯片（Allegro A3901）和两个微型电动机（FA-GM6-3V-25）。 通过这种组合，机器人的最大速度约为74 cm / s。 但是，为了实现运动的可控制性和平滑性，对于我们的应用，机器人以平均速度44 cm / s的较低速度运动。
+
+柔性电极包裹在3D打印的外壳内部，以提供电容式触摸感应功能。包括一个集成的电容式触摸感应电路（Atmel AT42QT1070），用于检测用户的触摸。
+
+嵌入式定制电子设备（如图5的PCB层所示）允许机器人控制。一个48MHz的ARM微控制器（STMicroelectronics STM32F051C8）管理总体逻辑计算，并使用2.4GHz无线电芯片（Nordic nRF24L01 +）与主计算机进行无线通信。作为基于投影仪的跟踪系统的一部分（在下一节中说明），两个光电二极管放置在机器人的顶部。彩色光电二极管位于光电二极管之间，用于机器人识别和反馈。
+
+机器人中的大部分功率（依次）由电动机，无线电模块，微控制器和LED消耗。静止时，每个机器人在移动时消耗大约40 mA和100​​ mA。因此，使用100 mAh电池，机器人可以移动一小时，并且在正常使用情况下甚至可以工作更长的时间。
+
+无线电通讯
+
+每个机器人都使用NRF24L01 +芯片与无线电接收器通信。我们使用Teensy 3.1微控制器作为主机，而Arduino Pro mini作为从机，我们测试了每个主机和数据包大小不同数量的从机的总通信时间。从实验中，我们发现总时间与包大小和从站数量呈线性关系，对于12个字节的包大小，每个主机最多可以有18个从站。 Zooids每个主机使用10个从站，其安全系数约为2。
+
+基于投影仪的跟踪系统
+
+与Lee [37]类似的基于投影仪的跟踪系统用于机器人位置跟踪。与基于摄像头的系统相反，我们基于投影仪的跟踪系统不会为每个机器人上的本地反馈控制增加任何网络延迟，从而使位置控制更加稳定。我们的系统设置如图6所示。使用德州仪器（TI）的高帧频（3000 Hz）投影仪（DLP LightCrafter），将一系列灰度编码的图案投影到平坦的表面上。然后，机器人上的光电二极管将格雷码独立解码到投影区域内的某个位置，并将其位置和方向发送到主计算机。由于图案的数量，位置刷新率约为73 Hz（1 /（每个图案41个图像1/3000）。由于投影机的菱形像素，水平和垂直分辨率略有不同。在当前设置中，将投影机放置在桌子上方1.25 m处，产生1 m 0.63 m的投影面积，水平分辨率和垂直分辨率分别为1.15 mm和1.12 mm。
+
+校准
+
+由于硬件的差异，所有机器人的行为均不完全相同，因此需要对关键要素进行校准。
+
+最小速度占空比每个机器人都有一个最小速度或脉宽调制（PWM）占空比，可以克服轮子与地面之间的静摩擦。尽管机器人的最小占空比相似，但它们的行为却不尽相同。因此，在启动阶段，每个机器人都要经过初始化和校准过程以找到自己的参数。这可以通过增加PWM占空比直到在100 ms内使机器人移动5 mm来实现。
+
+首选速度占空比在大部分活动时间内，机器人都以首选速度运动。与最小速度相似，需要校准首选速度占空比。再次增加PWM占空比，直到它以44 cm / s的额定首选速度移动为止。
+
+电机之间的增益由于每个机器人的行为不同，因此机器人内的电机也表现不同，因此需要在电机之间进行校准。校准过程如下：记录初始方向，让机器人移动0.5 s，比较最终方向和初始方向，并相应地增加或减少电机增益。重复此过程，直到初始方向和最终方向的距离小于5度为止。
+
+\subsection{软件}
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{zooids-6.png}
+    \caption*{图~6\hskip1em 软件架构}
+\end{figure}
+
+如图6所示，通信结构从最高到最低包括四个主要层：应用程序，仿真，服务器和硬件。
+
+在应用程序级别，将计算机器人的期望位置。这些所需的位置通过网络套接字传输到模拟层。应用编程人员可以在两种控制策略之间进行选择：比例积分微分（PID）位置控制或混合PID的混合倒数速度障碍（HRVO）（这些选项将在下面的段落中介绍）。基于选择的控制策略，仿真层计算机器人的目标位置（PID的最终位置或HRVO的中间点），并将其发送到服务器。最后，服务器层将命令分派给各个动物群，同时监视其状态和位置。
+
+我们系统的控制过程包括三个步骤：
+\begin{itemize}
+    \item 匈牙利目标分配（可选）
+    \item HRVO全局控制策略（可选）
+    \item PID位置控制
+\end{itemize}
+
+在进行任何移动之前，首先需要为每个机器人分配最终位置。最终位置可能是每个机器人专用的，也可以动态分配它们以更有效的方式移动。匈牙利算法[32]是一种众所周知的一对一任务代理问题的优化方法，可用于以最佳方式将目标位置分配给机器人。要优化的成本函数是从初始位置到最终位置的平方距离之和。
+
+在目标分配步骤之后，机器人需要朝着自己的目标移动，同时最大程度地减少彼此之间可能发生的碰撞。由于其快速的实时路径规划功能，我们选择使用HRVO控制策略[67，68]。借助HRVO，除非机器人检测到可能的碰撞，否则它会以用户定义的首选速度运动。在那种情况下，它使用速度障碍的概念，即所有机器人速度的集合，这将导致与另一个机器人的碰撞。尽管HRVO不能保证无碰撞，无振荡的控制，但与其他速度障碍策略相比，它大大减少了碰撞次数，同时提供了实时更新，这对于自然流畅的用户交互至关重要。为了实现HRVO，我们使用了Snape等人创建的HRVO库的略微修改版本。 [67，68]。
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{zooids-7.png}
+    \caption*{图~7\hskip1em 本地PID位置控制}
+\end{figure}
+
+使用HRVO控制策略，我们可以得出每个机器人沿路径的增量目标位置。这些位置被顺序发送到每个机器人，该机器人通过基于状态机的PID控制器（如图7所示）独立地控制其运动。给定最终目标，机器人最初会朝正确的方向旋转，一旦对齐，就会加速向其用户移动定义的首选速度。当达到速度时，它会通过方向的PID控制保持速度，以确保其朝向最终目标。当给出一个新的增量目标时，它仍将以相同的速度运动，但是定向上的PID控制将使机器人指向新的中间目标。当机器人到达最终目标5厘米之内时，它会减速至最小速度，一旦到达最终目标1厘米之内，它就会按照应用程序程序员的命令停止并自行定向。为了在增量目标位置之间实现平稳过渡，机器人会以60 Hz的频率获得下一个位置。
+
+\section{Swarm UI：设计原则和挑战}
+
+庞大的UI不仅从最终用户的角度而且从应用程序设计者的角度来看，都从根本上改变了我们对用户界面的看法。 我们讨论新概念，并在此处重点说明主要差异。
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{zooids-8.png}
+    \caption*{图~8\hskip1em Zooids设计空间探索}
+\end{figure}
+
+图8概述了Swarm接口的设计空间。 它们可以组织为一个交互方面（与一个动物类动物进行交互，通过一个动物类动物或与组进行控制），显示方面和环境方面（在中性区域中，在拥挤有外部物体的拥挤桌子中操作） 静态背景层或动态显示上方）。 我们在下面对其中一些方面进行扩展。
+
+\subsection{显示形式: Things vs. Stuff}
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{zooids-9.png}
+    \caption*{图~9\hskip1em “事物”与“东西”之间的连续性}
+\end{figure}
+
+设计群体用户界面需要同时考虑“事物”和“东西”。在我们之前的示例中，动物群可以代表单个对象（例如小部件），也可以代表更大的对象集合（例如圆形）。图9说明了这两种范式之间的连续性：事物是经历为单个固体对象的物理实体。填充物是物理实体，它们具有一定的形状和材质，可以重塑，分割，合并或暂时固化以模仿事物。构成填充物的元素可以足够大以至于可见（粒子），也可以太小而以不可见（原子）。典型的TUI位于连续体的左侧-由东西组成。相反，Swarm UI占据了连续体的右半部分。作为一种低分辨率的群体UI实施，动物类动物站在连续体的灰色区域，并且既有物力又有物力。
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=0.5\columnwidth]{zooids-10.jpg}
+    \caption*{图~10\hskip1em 1978年《太空侵略者》游戏中的外星人，1983年任天堂的《马里奥兄弟》游戏中的主要角色。}
+\end{figure}
+
+事物连续体也适用于传统的图形显示。 80年代的许多计算机显示器的分辨率都非常低（Sinclair ZX-81和Tandy TRS-80的半图形为64 48像素），因此像素是可辨认的粒子，就像我们之前的示例中的人畜共患动物一样（请参见图10）。现在，使用超高分辨率显示器，像素几乎变得不可见，即它们成为原子。但是，基于像素的显示和大量UI之间在概念上存在主要差异，我们将在下面讨论。
+
+\subsection{显示形式: 固定 vs. 可移动元素}
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=0.5\columnwidth]{zooids-11.png}
+    \caption*{图~11\hskip1em 通过使用（1）Bresenham算法和（2）自由对象定位来组合16个元素而获得的圆。}
+\end{figure}
+
+我们习惯于在计算机显示器上对图形进行编程，其中元素（像素）排列在规则的网格上，并且仅控制其颜色。尽管群体UI的元素也可以具有不同的颜色（在我们的系统中，每个动物群都嵌入了一个彩色LED），但是主要区别在于它们可以自由放置。即使两个系统之间的分辨率相同，元素组合成形状的方式也大不相同（见图11）。通常，与简单地打开和关闭像素相比，自由定位允许更好的形状控制。同时，这种额外的灵活性是以响应时间较慢和工程复杂性为代价的，并且存在诸如避免碰撞和优化元素-目标分配等算法问题。此外，对于只有很少动物等元素的系统，设计人员需要仔细考虑如何最佳地使用每个动物，就像80年代的设计人员必须仔细考虑如何最好地使用每个像素一样。随着大量UI分辨率的提高，它的关注将越来越少，但另一方面，工程和算法挑战可能会变得更加困难。此外，如图8所示，显示元素可以是同质的，如带动物的，也可以是异质的。
+
+\subsection{显示形式: 固定数量元素 vs. 可变数量元素}
+
+在常规的图形显示器上，像素的总数通常是固定的，并且通过简单地操纵像素颜色（例如，在白色背景上具有或多或少的深色像素）来实现在屏幕上具有更多或更少内容的错觉。相反，许多群体应用程序（例如，我们的绘图应用程序）要求元素的数量随时间实际变化。不能创建或销毁动物小动物，但是正如我们所看到的，未分配的动物小动物可以放置在专用区域中，并在需要时移动到工作区。这种类型的对象持久性有助于实现真实感，并可以帮助用户在视图更改中保持方向[7]。结果，对象持久性通常被实现为现代GUI中的隐喻（例如[44]）。 Swarm UI本身就支持这些隐喻，它们迫使设计者考虑如何对外观和消失进行动画处理[7]。但是，当需要真实的外观和消失时，大量的UI可能是不切实际的，并且不断到达和离开的元素所产生的运动可能会分散最终用户的注意力。
+
+\subsection{显示形式: 具有标识的元素 vs. 可互换的元素}
+
+要进行的一个重要区别是，具有固定标识的大量UI元素与不可互换的元素之间。通常，用作“事物”的元素具有固定的标识，而构成“事物”的元素是可互换的。例如，在我们的形状绘制应用程序中，组成一个圆或一条线的动物标本没有自己的身份，可以自由交换。如实施部分所述，这可以优化群体界面，从而即使在复杂的过渡过程中，动物的运动也保持最小。同时，不希望将小部件（例如，手柄中的一个）与另一只动物类交换，因为这可能使用户感到迷惑，特别是如果她要抓住它。类似地，在每个动物群具有稳定含义的系统中（例如，一个动物群代表一个数据点的可视化系统），交换动物群会产生令人困惑或误导的动画。因此，群体UI的设计者应仔细考虑哪些元素是可互换的，以及应该为哪些元素赋予固定的标识。最后，永远不要重新分配被操纵的元素，这在我们当前的Zooid实现中会自动确保。
+
+\subsection{交互：元素操纵}
+
+常规的图形显示不允许对像素进行物理操作。尽管直接触摸显示器给人一种直接操作的感觉，但主观体验和表现力水平却不足以实现真正的物理对象操作[75]。相比之下，动物类动物可以被抓住并直接被操纵，从而可以充分利用人类的手[34]。例如，在我们的群绘制方案中，用户不仅可以使用诸如控制点之类的替代物来操纵曲线，还可以直接对曲线进行整形。我们的系统通过记录触碰动物的时间并根据其位置不断更新其目标来明确支持此类交互。通常，大量的UI设计人员不仅应该关注“综合”交互的设计，而且还应该考虑纯物理交互方面的可能性[28]。由于它们的形状因素，可将动物类动物既作为对象（东西）的集合，又作为单个对象（东西）进行操纵。随着群体用户界面元素的变小，负担能力将发生巨大变化。例如，大米可以单独处理，但是大米最好作为“原料”来处理。尽管在像我们这样的具有足够大元素的系统中本机支持对象操纵，但未来的成群用户界面将需要能够将多个元素合并为实体对象，以支持类似操纵。
+
+\subsection{互动：元素的不同作用}
+
+可以为不同的swarm UI元素赋予不同的角色。例如，在我们的时间序列可视化应用程序中，顶部的动物群仅用于显示目的，而底部的动物群用作控制器。相比之下，在绘图应用程序中，尽管不同的动物对输入的解释也不同，但动物和动物都用于输入和输出。例如，在我们的矩形绘图工具中，移动两个控制点可以重塑矩形，而移动任何其他动物模型都可以对其进行转换。为不同的swarm UI元素赋予不同的角色可以提高设计的灵活性，但同时也带来了如何传达能力的问题。在我们的示例应用程序中，我们将不同的LED颜色分配给不同的功能，但是颜色映射是任意的，并且该方法假定已经熟悉系统的用户。通过给不同的人畜共患病动物提供不同的形状，可以更好地提供食物，这与TUI设计的传统一致[13]。这些不同的形状可能是可裁剪的，或者说，动物类动物可以动态改变其形状。但是，对于高分辨率群体UI，更自然的方法是通过将许多粒子或原子组装在一起来生产不同形状的对象，如我们先前所讨论的。
+
+\subsection{环境：额外的视觉反馈}
+
+尽管我们说明的绘图应用程序是纯集群用户界面，但实际上，许多粗粒度的集群用户界面都需要显示额外的可视信息（例如文本）才能真正使用。我们举例说明了两种方法：一种可以制作包含所有必要注解的支撑表面，只要这些注解随着时间的推移是稳定的（例如在棋盘游戏中）。当注释需要随时间变化时，可以将动物标本放置在常规的图形显示器上，或者，如果光学跟踪在红外光谱中，则可以使用顶部投影。尽管当前需要额外的显示硬件，但与传统的TUI相比，动物类动物可以自己传达更多的视觉信息，而传统的TUI仅仅包含一些有形的控制器，并且通常会通过其他图形叠加来传达大多数视觉信息。可以想象，未来的大量用户界面将具有足够的高分辨率，能够充当其自己的显示，从而完全消除了对虚拟信息叠加的需求，而虚拟叠加信息会遇到许多问题，例如（用于顶部投影）遮挡，校准困难，并且难以在发亮或黑暗的表面上投射[17]。
+
+\section{局限性和未来工作}
+
+Zooids系统存在许多技术限制，限制了其作为群用户界面的功能和性能。这些范围从设备的规模和速度到成本。
+
+一个重大限制是我们的机器人具有非完整的驱动器，这意味着它们无法在二维空间中自由移动，而必须转向特定方向，例如汽车。具有全向驱动的完整系统将使机器人能够更平稳地移动，并且更容易响应用户交互。与使用机器人作为显示器的情况不同，可以预先计算运动路径[63]，我们的交互系统可能无法找到简单或可理解的路径，尤其是当运动距离较小时。
+
+当前，我们的输入感测仅限于每个机器人周围的电容式触摸输入。一次与许多动物接触时，并不是所有的触摸传感器都会被激活，只有那些直接触摸用户手的触摸传感器才会被激活。传感器融合技术可用于识别和匹配两个或多个正在一致移动的机器人之间的运动。这将允许同时利用许多机器人的直接操纵的更丰富的交互技术。
+
+我们系统的另一个技术限制是它使用外部投影仪进行跟踪。该要求增加了成本，并且还需要额外的硬件和设置才能使用该系统，从而阻碍了动物类的可扩展性。此外，像所有光学跟踪系统一样，我们的系统也受到与系统交互时经常发生的种种限制。最后，我们的投影仪和光电二极管在光谱范围内工作，因此很难在过多的环境光下使用（可以通过使用IR投影仪和光电二极管来改善这一点）。许多不同的方法可以改善我们的跟踪。与Valve的Vive Lighthouse跟踪器（http://www.htcvive.com）相似，使用旋转IR激光线信标可以大大降低成本，而拥有多个信标则可以解决某些遮挡问题。但是，我们看到了无线跟踪的巨大潜力，它可以减少设置，而只需添加少量固定信标（锚），即可根据接收到的无线电信号强度进行定位。或者，未来通过轮编码器和IMU之间的传感器融合改进航位推测定位技术的工作，再加上IR或RSSI元素之间无锚定点的定位，可以完全减少对外部跟踪的需求。我们认为，技术的进步将使大量的UI受益，从而允许更多的无所不在的安装。
+
+许多机器人的电源和充电管理面临许多挑战。当前，我们的系统依赖于每个机器人必须手动放置的单独充电器。一个自动系统（可能在每个机器人中集成了无线充电线圈）可以让机器人在需要时通过返回充电基站自动进行充电。
+
+当前系统中元素的规模和数量限制了交互类型和可以创建的应用程序-越来越少的元素可能允许与“事物”（而非“事物”）进行根本不同和更丰富的交互样式。为了实现更小的元件，我们将需要从带齿轮的直流齿轮电动机上移开，以便运动到其他致动装置，例如压电致动器。已经开发出了其他微型机器人，它们利用压电致动的顺应性联动装置，以较小的比例产生类似于小昆虫的运动[65]，然而，这种规模的电力电子技术仍然具有挑战性[69]。限制机器人数量的另一个因素是成本。我们目前的小批量生产机器人设计，每个机器人的零件和组装成本约为50美元。在研究应用之外，这使得超过30至40的成本高昂。随着大规模生产的进一步设计，可以降低每台机器人的价格，但是其他制造技术，例如可打印和可折叠的机器人[11]，最终可能会实现便宜得多的群体接口系统。
+
+另一个很大的限制是交互区域以及元素可以在其上移动的表面的类型。由于类人动物的运动依赖于一组小的橡胶轮，因此我们的系统只能以最小的牵引力在相对平坦的表面上工作。这将我们的系统限制为2D交互。显然，对空中无人机群的研究[33]提供了制作完整3D接口的机会。但是，我们看到了进一步探索基于地面的群体接口的巨大机会，这些接口可能能够重新配置为2.5D甚至3D显示器。从蚂蚁和其他昆虫那里汲取灵感，它们可以通过交织和连接，甚至在彼此之上滚动而形成复杂的形状[8，59]。我们还看到了不同类别的机器人的巨大潜力，这些机器人可以帮助构造更多的3D形状，例如坡道机器人或其他可以使群体接口形成更复杂结构的无源构建块，类似于群体机器人的最新工作[79]。
+
+最后，我们想探索更多的应用领域。现在我们已经创建了一个可扩展的平台，我们可以探索并快速制作原型。我们认为信息可视化是一个令人兴奋的领域，特别是对于创建参与度和教育领域而言。与传统的GUI相比，更好地了解大量用户界面的优缺点也很重要。为此，进行用户研究将确定使用群体用户界面的有利条件。我们希望我们的开源平台还能够鼓励其他研究人员，设计师和教育工作者探索各种应用，并将能够进一步评估和研究切实的交互作用原理。
+
+\section{结论}
+
+我们引入了群体用户界面，这是一类新的用户界面，由“集体移动并对用户输入做出反应的独立自走元素”组成。 我们描述了Zooids的技术实现，Zooids是一种用于构建群体用户界面的新型开源平台，并通过具体示例说明了其可能性。 我们希望本文和Zooids平台能够刺激更多的用户界面研究，并使我们更接近Sutherland和Ishii对最终用户界面的愿景，该愿景能够将人类的物理操作能力与计算能力完全结合在一起。
+
+有关实施Zooid的所有必要材料和文档，请参见
+
+https://github.com/PhysicalInteractionLab/SwarmUI/。
+
+\section{参考文献}
+
