--- a/data/PCB.tex
+++ b/data/PCB.tex
@@ -129,3 +129,20 @@
 \section{扩展接口}
 
 三明治扩展。
+
+\section{接口}
+为了紧跟潮流，我们使用USB Type-C接口进行供电和烧写程序：
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{Figure-2-USB-Type-C-pins.jpg}
+    \caption{USB-Type-C-pins}
+    \label{fig:USB-Type-C-pins}
+\end{figure}
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\columnwidth]{USB-2-To-Type-C.pdf}
+    \caption{USB-TypeC}
+    \label{fig:USB-TypeC}
+\end{figure}
