--- a/data/Appendix-PCB.tex
+++ b/data/Appendix-PCB.tex
@@ -1,6 +1,8 @@
-\chapter{PCB原理图}
+\chapter{PCB相关资料}
 \label{cha:Appendix-PCB}
 
+\section{引脚映射图}
+\label{sec:Pin2560}
 % Please add the following required packages to your document preamble:
 % \usepackage{longtable}
 % Note: It may be necessary to compile the document several times to get a multi-page table to line up properly
@@ -115,5 +117,6 @@
     \label{tab:PinMap}\\
 \end{longtable}
 
+\section{PCB原理图}
 
 \includepdf[pages={1-2}]{MEGA2560_Rev3e_sch.pdf}
